k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: pricey.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: authentication-clusterip-srv
                port:
                  number: 8080
